# audio-practice-looper

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ascii_demo.py  build_installer.py  demo_app.py  simple_build.py  simple_demo.py
.github/workflows/: ci.yml
cmake/: FetchAubio.cmake  FetchJUCE.cmake  FetchRubberBand.cmake  FindFFmpeg.cmake  aubio_config.h.in
scripts/: build_check.sh
src/: AnalysisWorker.cpp  AnalysisWorker.h  App.cpp  App.h  AudioEngine.cpp  AudioEngine.h  AudioFileSource.cpp  AudioFileSource.h  CMakeLists.txt  DeviceSelector.cpp  DeviceSelector.h  EQNode.cpp  EQNode.h  ExportDialog.cpp  ExportDialog.h  ExportEngine.cpp  ExportEngine.h  LoopControls.cpp  LoopControls.h  MainWindow.cpp  MainWindow.h  MainWindow_minimal.cpp  MainWindow_minimal.h  PedalComponent.cpp  PedalComponent.h  RubberBandNode.cpp  RubberBandNode.h  SimpleAudioEngine.cpp  SimpleAudioEngine.h  SystemAudioCapture.cpp  SystemAudioCapture.h  TransportBar.cpp  TransportBar.h  WaveformView.cpp  WaveformView.h  main.cpp
src/Utils/: LockFreeRingBuffer.h  ParameterSmoother.h
tests/: AudioEngineTest.cpp  CMakeLists.txt  ExportEngineTest.cpp  LockFreeRingBufferTest.cpp  ParameterSmootherTest.cpp  test_main.cpp
